infra/k8s/ingress/ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-temp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: postulaunjbg.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-web-srv
                port:
                  number: 80
