infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: todoapp.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: todoapp-auth-srv
                port:
                  number: 8080

          - path: /api/tasks/?(.*)
            pathType: Prefix
            backend:
              service:
                name: todoapp-core-srv
                port:
                  number: 3000

          # Ruta /* debe ir al final
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: todoapp-web-srv
                port:
                  number: 5173
